# Spanning-Tree-Generation-via-Connected-Network-Traversal

./: .gitignore  CMakeLists.txt  README.md
data/: graph.txt
docs/: dev1.md  phase-six-acceptance-record.md  phase-six-acceptance.md
legacy/: CMakeLists.txt
legacy/include/: aml_graph.hpp
scripts/: verify.ps1
src/: aml_graph.cpp  main.cpp
src/application/: ApplicationDtos.h  ApplicationError.h  ProjectApplicationService.cpp  ProjectApplicationService.h  Result.h
src/domain/alias/: AliasDictionary.cpp  AliasDictionary.h
src/domain/chapter/: ChapterCollection.cpp  ChapterCollection.h
src/domain/error/: DomainError.h
src/domain/graph/: AdjacencyMultilistGraph.cpp  AdjacencyMultilistGraph.h
src/domain/model/: ChapterTypes.h  GraphTypes.h  ProjectSnapshot.h
src/domain/project/: NovelRelationProject.cpp  NovelRelationProject.h
src/domain/statistics/: GraphStatisticsBuilder.cpp  GraphStatisticsBuilder.h
src/domain/traversal/: ChildListTree.cpp  ChildListTree.h  GraphTraversal.cpp  GraphTraversal.h  IGraphView.h
src/domain/validation/: ValidationReport.cpp  ValidationReport.h
src/infrastructure/persistence/: AtomicSaveRecovery.h  BinaryProjectSerializer.cpp  BinaryProjectSerializer.h  IProjectSerializer.h  PersistenceError.h  Sha256.cpp  Sha256.h
src/infrastructure/text/: ChapterTextParser.cpp  ChapterTextParser.h  DictionaryNameExtractor.cpp  DictionaryNameExtractor.h  DictionaryTextParser.cpp  DictionaryTextParser.h  TextFileError.h  Utf8TextFileLoader.cpp  Utf8TextFileLoader.h
src/presentation/: MainWindow.cpp  MainWindow.h
src/presentation/dialogs/: AliasManagementDialog.cpp  AliasManagementDialog.h  ChapterEditorDialog.cpp  ChapterEditorDialog.h  DialogData.h  NewProjectDialog.cpp  NewProjectDialog.h  PersonManagementDialog.cpp  PersonManagementDialog.h
src/presentation/graphics/: PersonNodeItem.cpp  PersonNodeItem.h  RelationEdgeItem.cpp  RelationEdgeItem.h  RelationGraphSceneController.cpp  RelationGraphSceneController.h  RelationGraphView.cpp  RelationGraphView.h  TraversalTreeSceneController.cpp  TraversalTreeSceneController.h  TraversalTreeView.cpp  TraversalTreeView.h
src/presentation/interaction/: IUserInteraction.h  QtUserInteraction.cpp  QtUserInteraction.h
src/presentation/models/: ChapterTableModel.cpp  ChapterTableModel.h  PersonTableModel.cpp  PersonTableModel.h  RelationTableModel.cpp  RelationTableModel.h  SearchSortProxyModel.cpp  SearchSortProxyModel.h  UiRows.h
tests/: test_graph.cpp
tests/application/: test_phase_five_application.cpp
tests/domain/: test_adjacency_multilist_graph.cpp  test_phase_six_graph_validation.cpp  test_phase_three.cpp  test_phase_two.cpp
tests/infrastructure/: test_phase_four.cpp  test_phase_six_atomic_save.cpp
tests/phase_six/: test_phase_six_performance.cpp
tests/presentation/: test_graphics_phase_five.cpp  test_phase_six_user_flows.cpp  test_ui_phase_five.cpp
